# swc-wasm-slowdown

./: .gitignore  Cargo.toml  README.md  index.js  package.json
src/: lib.rs
test/: babel.js  index.html  napi.js  parcel.js  wasm.js
wasm-parcel/: package.json  parcel_js_swc_wasm.js  parcel_js_swc_wasm.orig.js
