[package]
edition = "2021"
name = "scw-wasm-slowdown-own"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
swc_common = {version = "0.15.1", features = ["tty-emitter", "sourcemap"]}
swc_ecmascript = {version = "0.99.1", features = ["parser", "transforms", "module", "optimization", "react", "preset_env", "typescript", "utils", "visit", "codegen", "utils"]}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
napi = {version = "1.7.10"}
napi-derive = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
parking_lot_core = "=0.8.0"
wasm-bindgen = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.build-dependencies]
napi-build = "1"
